mc/issues/#317 Sidebar toggle is reliably visible but the animation is very abrupt

--- a/static/css/app_bootstrap_overrides.css
+++ b/static/css/app_bootstrap_overrides.css
@@ -255,7 +255,7 @@ input[type="checkbox"].form-control:focus {
 
 /* overload collapsing style */
 .collapsing {
-    -webkit-transition: width .2s ease-out;
-    -o-transition:      width .2s ease-out;
-    transition:         width .2s ease-out;
+    -webkit-transition: all .2s ease;
+    -o-transition:      all .2s ease;
+    transition:         all .2s ease;
 }
